release/prd/istio/istio.yaml
---
# Source: microservices-manifests-istio/templates/account/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  namespace: istio-system
  name: account-app-destination-rule
  labels:
    env: prd
spec:
  exportTo:
    - "*"
  host: account-app-service.microservices.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: DISABLE
---
# Source: microservices-manifests-istio/templates/customer/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  namespace: istio-system
  name: customer-app-destination-rule
  labels:
    env: prd
spec:
  exportTo:
    - "*"
  host: customer-app-service.microservices.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: DISABLE
---
# Source: microservices-manifests-istio/templates/orchestrator/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  namespace: istio-system
  name: orchestrator-app-destination-rule
  labels:
    env: prd
spec:
  exportTo:
    - "*"
  host: orchestrator-service.microservices.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: DISABLE
---
# Source: microservices-manifests-istio/templates/order/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  namespace: istio-system
  name: order-app-destination-rule
  labels:
    env: prd
spec:
  exportTo:
    - "*"
  host: order-app-service.microservices.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: DISABLE
---
# Source: microservices-manifests-istio/templates/customer/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  namespace: istio-system
  name: customer-app-gateway
  labels:
      env: prd
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http-customer-app
        protocol: HTTP
        number: 30000
      hosts:
        - "*"
---
# Source: microservices-manifests-istio/templates/orchestrator/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  namespace: istio-system
  name: orchestrator-app-gateway
  labels:
    env: prd
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http-orchestrator-app
        protocol: HTTP
        number: 30001
      hosts:
        - "*"
---
# Source: microservices-manifests-istio/templates/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  namespace: istio-system
  name: peer-authentication
  labels:
      env: prd
spec:
  mtls:
    mode: DISABLE
---
# Source: microservices-manifests-istio/templates/account/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: istio-system
  name: account-app-virtual-service
  labels:
      env: prd
spec:
  exportTo:
    - "*"
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - name: account-route
      match:
        - uri:
            prefix: /account/
      route:
        - destination:
            host: account-app-service.microservices.svc.cluster.local
            port:
              number: 80
---
# Source: microservices-manifests-istio/templates/customer/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: istio-system
  name: customer-app-virtual-service
  labels:
      env: prd
spec:
  exportTo:
    - "*"
  hosts:
    - "*"
  gateways:
    - customer-app-gateway
  http:
    - name: customer-route
      match:
        - uri:
            prefix: /customers/
      route:
        - destination:
            host: customer-app-service.microservices.svc.cluster.local
            port:
              number: 80
---
# Source: microservices-manifests-istio/templates/orchestrator/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: istio-system
  name: orchestrator-app-virtual-service
  labels:
      env: prd
spec:
  exportTo:
    - "*"
  hosts:
    - "*"
  gateways:
    - orchestrator-app-gateway
  http:
    - name: checkout-route
      match:
        - uri:
            prefix: /checkout/
      route:
        - destination:
            host: orchestrator-service.microservices.svc.cluster.local
            port:
              number: 80
---
# Source: microservices-manifests-istio/templates/order/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: istio-system
  name: order-virtual-service
  labels:
      env: prd
spec:
  exportTo:
    - "*"
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - name: order-route
      match:
        - uri:
            prefix: /orders/
      route:
        - destination:
            host: order-app-service.microservices.svc.cluster.local
            port:
              number: 80
